# propertytree

./: .coveralls.yml  .gitmodules  .travis.yml  CMakeLists.txt  Config.cmake.in  Makefile  README.md  cmd_build.txt  configure.py  createclientlib  gencov_ut  groups  prepare_external.sh  project.config  uc  valgrind_suppression_e2e_test
E2ETest/: BasicTest.cpp  ConcurrentOperationTest.cpp  Utils.hpp  main.cpp
E2ETests/: CMakeLists.txt  main.cpp
SCT/: RpcHopping  asd.ptproj  checkForPrematurelyDeletedTCV.py  checkallprematuredeletedtcv  runrcphopping.sh  test.sh  testing  testing.cpp
client/propertytree/: logger.hpp  value_client.cpp  value_client.hpp
client/src/: Client.cpp  Client.hpp  ClientIncoming.cpp  ClientIncoming.hpp  ClientOutgoing.cpp  ClientOutgoing.hpp  IClientIncoming.hpp  IClientOutgoing.hpp  IProperty.hpp  LocalPTree.cpp  LocalPTree.hpp  MessageHandlerFactory.cpp  MessageHandlerFactory.hpp  Node.hpp  NodeContainer.hpp  PTreeClient.cpp  PTreeClient.hpp  PTreeTcpClient.hpp  Property.hpp  RpcContainer.cpp  RpcContainer.hpp  TransactionsCV.cpp  TransactionsCV.hpp  Types.hpp  ValueContainer.cpp  ValueContainer.hpp  logger.hpp  value_client.cpp  value_client.hpp
client/src/MessageHandlers/: GenericResponseMessageHandler.cpp  GenericResponseMessageHandler.hpp  HandleRpcRequestMessageHandler.cpp  HandleRpcRequestMessageHandler.hpp  MessageHandler.cpp  MessageHandler.hpp  MetaUpdateNotificationMessageHandler.cpp  MetaUpdateNotificationMessageHandler.hpp  PropertyUpdateNotificationMessageHandler.cpp  PropertyUpdateNotificationMessageHandler.hpp  SigninResponseMessageHandler.cpp  SigninResponseMessageHandler.hpp
client/tests/ut/: ClientTests.cpp
common/TestingFramework/: EndPointMock.cpp  EndPointMock.hpp  Matcher.cpp  Matcher.hpp  MessageCreationHelper.hpp  MessageMatcher.cpp  MessageMatcher.hpp
common/src/: IEndPoint.hpp  Logger.cpp  Logger.hpp  TcpEndPoint.cpp  TcpEndPoint.hpp  Utils.hpp
configuration/: server.cfg
design/: Messages  design.uml
gtest/: Makefile
interface/: MessageCoDec.hpp  MessageCoDecHelpers.hpp  MessageEssential.hpp  NewMessageCoDec.hpp  api_operations.txt  protocol.cum  protocol.hpp  protocol_ng.cum  protocol_ng.hpp  protocol_x.hpp
interface/propertytree/: protocol_ng.cum  protocol_ng.hpp  protocol_udp.hpp
monitor/src/: main.cpp
mystery/: another  another_same_day  crash_log  crash_log_2  ohfuck_log
server/src/: ClientServer.cpp  ClientServer.hpp  ConnectionSession.cpp  ConnectionSession.hpp  IConnectionSession.hpp  IPTreeServer.hpp  IServer.hpp  Logger.cpp  Logger.hpp  Node.hpp  PTree.cpp  PTree.hpp  PTreeServer.cpp  PTreeServer.hpp  PTreeTcpServer.cpp  PTreeTcpServer.hpp  ProtocolHandler.cpp  ProtocolHandler.hpp  Server.cpp  Server.hpp  Types.hpp  Utils.cpp  Utils.hpp  logger.hpp  main.cpp  node_server.hpp  protocol_ng.hpp  tcp_value_server.cpp  tcp_value_server.hpp  udp_value_server.cpp  udp_value_server.hpp  utils.hpp  value_map.hpp  value_server.cpp  value_server.hpp
server/src/MessageHandlers/: CreateRequest.cpp  CreateRequest.hpp  DeleteRequest.cpp  DeleteRequest.hpp  GetValueRequest.cpp  GetValueRequest.hpp  SetValueIndication.cpp  SetValueIndication.hpp  SigninRequest.cpp  SigninRequest.hpp  SubscribeUpdateRequest.cpp  SubscribeUpdateRequest.hpp  UnsubscribeUpdateRequest.cpp  UnsubscribeUpdateRequest.hpp
server/src/MessageHelpers/: MessageCreateResponseSender.cpp  MessageCreateResponseSender.hpp  MessageDeleteResponseSender.cpp  MessageDeleteResponseSender.hpp  MessageGetValueResponseSender.cpp  MessageGetValueResponseSender.hpp  MessageMetaUpdateNotificationSender.cpp  MessageMetaUpdateNotificationSender.hpp  MessagePropertyUpdateNotificationSender.cpp  MessagePropertyUpdateNotificationSender.hpp  MessageSender.cpp  MessageSender.hpp  MessageSignInResponseSender.cpp  MessageSignInResponseSender.hpp  MessageSubscribeUpdateNotificationResponseSender.cpp  MessageSubscribeUpdateNotificationResponseSender.hpp  MessageUnsubscribeUpdateNotificationResponseSender.cpp  MessageUnsubscribeUpdateNotificationResponseSender.hpp
server/src/Messaging/: MessageEssential.cpp  MessageEssential.hpp
server/src/Serverlet/: ClientServer.cpp  ClientServer.hpp  ClientServerConfig.hpp  IClientServer.hpp  IEndPoint.hpp  IPTreeOutgoing.hpp  MessageHandlerFactory.cpp  MessageHandlerFactory.hpp  PTreeIncoming.cpp  PTreeIncoming.hpp  PTreeOutgoing.cpp  PTreeOutgoing.hpp  TcpEndPoint.hpp
server/src/Serverlet/MessageHandlers/: CreateRequestMessageHandler.cpp  CreateRequestMessageHandler.hpp  DeleteRequestMessageHandler.cpp  DeleteRequestMessageHandler.hpp  GetSpecificMetaRequestMessageHandler.cpp  GetSpecificMetaRequestMessageHandler.hpp  GetValueRequestMessageHandler.cpp  GetValueRequestMessageHandler.hpp  HandleRpcResponseMessageHandler.cpp  HandleRpcResponseMessageHandler.hpp  MessageHandler.cpp  MessageHandler.hpp  RcpRequestMessageHandler.cpp  RcpRequestMessageHandler.hpp  RpcRequestMessageHandler.cpp  RpcRequestMessageHandler.hpp  SetValueIndicationMessageHandler.cpp  SetValueIndicationMessageHandler.hpp  SigninRequestMessageHandler.cpp  SigninRequestMessageHandler.hpp  SubscribePropertyUpdateRequestMessageHandler.cpp  SubscribePropertyUpdateRequestMessageHandler.hpp  UnsubscribePropertyUpdateRequestMessageHandler.cpp  UnsubscribePropertyUpdateRequestMessageHandler.hpp
server/tests/ut/: ClientServerTests.cpp  ComparisonTests.cpp  MessageTests.cpp  PTreeTests.cpp
server/tests/ut/MessageHelpers/: MessageCreateRequestCreator.cpp  MessageCreateRequestCreator.hpp  MessageCreateResponseCreator.cpp  MessageCreateResponseCreator.hpp  MessageCreator.cpp  MessageCreator.hpp  MessageDeleteRequestCreator.cpp  MessageDeleteRequestCreator.hpp  MessageDeleteResponseCreator.cpp  MessageDeleteResponseCreator.hpp  MessageGetValueRequestCreator.cpp  MessageGetValueRequestCreator.hpp  MessageGetValueResponseCreator.cpp  MessageGetValueResponseCreator.hpp  MessageSetValueIndicationCreator.cpp  MessageSetValueIndicationCreator.hpp  MessageSignInRequestCreator.cpp  MessageSignInRequestCreator.hpp  MessageSignInResponseCreator.cpp  (+9 more)
(+14 files in other folders)
